# ising-random-graphs

./: .editorconfig  .gitignore  .igraphrc  J.py  README.md  calc_suscept  calc_suscept_avg.awk  compute_std  compute_suscept  critical_ER_single_expon_alpha.txt  critical_ER_single_expon_size.txt  find_tc  find_tc.go  graph.py  ising.py  main.py  notes.txt  params.txt  plot  plot.py  plot_suscept  process_temps  pyproject.toml  requirements.txt  run  run_parallel  run_suscept  simulate.py  watch
data/: data-n=128-m=2-steps=10000-repeat=100.csv  data-n=128-m=2-steps=10000-repeat=40-interact=3.csv  data-n=128-m=2-steps=10000-repeat=40-interact=4.csv  data-n=64-m=2-steps=100-repeat=1.csv  data-n=64-m=2-steps=100-repeat=10.csv  data-n=64-m=2-steps=100-repeat=100.csv  data-n=64-m=2-steps=1000-repeat=10.csv  data-n=64-m=2-steps=1000-repeat=20.csv  data-n=64-m=2-steps=10000-repeat=100.csv  data-n=64-m=2-steps=10000-repeat=50.csv  data-n=64-m=2-steps=5000-repeat=20.csv  data-n=64-m=3-steps=1000-repeat=3.csv  data-n=64-m=3-steps=10000-repeat=1.csv  data-n=64-m=3-steps=10000-repeat=100.csv  data-nodes=64-m=2-steps=1000-repeat=3.csv
figures/: common.py  ising.excalidraw  plot_TC_vs_alpha.py  plot_TC_vs_alpha_lattice.py  plot_TC_vs_k.py  plot_TC_vs_size.py  plot_energy_magnet_temp.py  plot_graph.py  plot_magnet_steps.py  plot_single_multiple.py  plot_suscept_multiple.py  plot_suscept_nearest.py  plot_suscept_single.py  tanh_mean_field.py
ising/: __init__.py  __main__.py  average.py  cli.py  domain.py  estimate.py  graph.py  ising.py  run.py  simulation.py
ising/plotting/: common.py  plot_suscept_multiple.py  plot_suscept_nearest.py  plot_suscept_single.py  suscept.py
tex/: main.tex  refs.bib
