[tool.poetry]
name = "ising-random-graphs"
version = "0.1.0"
description = ""
authors = ["Dawid Karp <dadulerk@gmail.com>"]
readme = "README.md"
packages = [{include = "ising"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
igraph = "^0.10.4"
matplotlib = "^3.7.1"
pycairo = "^1.23.0"
pyqt5 = "^5.15.9"
numpy = "^1.24.3"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
