[tool.poetry]
name = "ising"
version = "1.0.0"
description = "Ising model simulation done on random graphs (eg. BA, ER)"
authors = ["Dawid Karpinski"]
readme = "README.md"

[tool.poetry.scripts]
compile = "ising.simulation:main"
ising = "ising.run:main"
graph = "ising.graph:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
numba = "^0.57.0"
networkx = "^3.1"
scipy = "^1.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
