[tool.poetry]
name = "ising"
version = "1.0.0"
description = "Ising model simulation done on random graphs (eg. BA, ER)"
authors = ["Dawid Karpinski"]
readme = "README.md"

[tool.poetry.scripts]
compile = "ising.simulation:main"
ising = "ising.run:main"
gengraph = "ising.graph:main"
average = "ising.average:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
numba = "^0.57.0"
networkx = "^3.1"
scipy = "^1.11.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"

[tool.ruff]
select = [
    "A",  # prevent using keywords that clobber python builtins
    "B",  # bugbear: security warnings
    "E",  # pycodestyle
    "F",  # pyflakes
    "ISC",  # implicit string concatenation
    "UP",  # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
